[mgnt] Boilerplate commit

--- a/mgnt-console/frontend/src/views/Pages/Login/package.json
+++ b/mgnt-console/frontend/src/views/Pages/Login/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Full",
+  "name": "Login",
   "version": "0.0.0",
   "private": true,
-  "main": "./Full.jsx"
+  "main": "./Login.jsx"
 }
