--- a/mgnt-console/src/app/frontend/package.json
+++ b/mgnt-console/src/app/frontend/package.json
@@ -6,9 +6,11 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
-    "react-scripts": "1.0.6"
+    "react-scripts": "1.0.6",
+    "redux-devtools": "^3.4.0"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "chart.js": "2.5.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
@@ -16,9 +18,11 @@
     "react-addons-transition-group": "15.5.2",
     "react-chartjs-2": "2.1.0",
     "react-dom": "15.5.4",
+    "react-redux": "^5.0.5",
     "react-router-dom": "4.1.1",
     "react-transition-group": "^1.1.3",
-    "reactstrap": "4.6.2"
+    "reactstrap": "4.6.2",
+    "redux": "^3.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
