--- a/mgnt-console/src/app/frontend/package.json
+++ b/mgnt-console/src/app/frontend/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "4.1.1",
     "react-transition-group": "^1.1.3",
     "reactstrap": "4.6.2",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "universal-cookie": "^2.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
