--- a/mgnt-console/src/app/frontend/package.json
+++ b/mgnt-console/src/app/frontend/package.json
@@ -17,6 +17,7 @@
     "react-addons-css-transition-group": "15.5.2",
     "react-addons-transition-group": "15.5.2",
     "react-chartjs-2": "2.1.0",
+    "react-codemirror": "^1.0.0",
     "react-dom": "15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "4.1.1",
