--- a/mgnt-console/src/app/frontend/package.json
+++ b/mgnt-console/src/app/frontend/package.json
@@ -13,11 +13,12 @@
     "base-64": "^0.1.0",
     "chart.js": "2.5.0",
     "history": "^4.6.1",
+    "immutability-helper": "^2.3.0",
     "react": "^15.5.4",
+    "react-ace": "^5.1.0",
     "react-addons-css-transition-group": "15.5.2",
     "react-addons-transition-group": "15.5.2",
     "react-chartjs-2": "2.1.0",
-    "react-codemirror": "^1.0.0",
     "react-dom": "15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "4.1.1",
