--- a/mgnt-console/src/app/frontend/package.json
+++ b/mgnt-console/src/app/frontend/package.json
@@ -14,6 +14,7 @@
     "chart.js": "2.5.0",
     "history": "^4.6.1",
     "immutability-helper": "^2.3.0",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-ace": "^5.1.0",
     "react-addons-css-transition-group": "15.5.2",
