[mgnt] Docker ready

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,25 @@ services:
             - "1883:1883"
         volumes:
             - /tmp/docker/rabbit:/tmp/docker/rabbit
+    mongo:
+        build: mongodb:latest
+        ports:
+            - "27017:27017"
     prepros:
         build: ./pre-processor
         links:
             - rabbit
+            - mongo
         environment:
             - BROKER_ADDRESS=rabbit
+            - MONGO_URL=mongodb://mongo:27017/wyze
+    console:
+        build: ./mgnt-console
+        links:
+            - rabbit
+            - mongo
+        environment:
+            - BROKER_ADDRESS=rabbit
+            - MONGO_URL=mongodb://mongo:27017/wyze
+        ports:
+            - "5000:5000"
