--- a/mgnt-console/Dockerfile
+++ b/mgnt-console/Dockerfile
@@ -1,3 +1,17 @@
 FROM skiftcreative/supervisor
 
 MAINTAINER Project Wyze Team
+
+ENV BUILD_DIR /tmp/build/
+ENV APP_DIR /var/app
+
+RUN apk update && apk add --update alpine-sdk
+
+COPY src /var/app
+
+COPY conf/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+COPY conf/requirements.txt $BUILD_DIR
+RUN pip3 install -r $BUILD_DIR/requirements.txt -i https://pypi.douban.com/simple
+
+CMD ["/usr/bin/supervisord"]
