[router] Renamed pre-processor to wyze-router

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
         build: mongodb:latest
         ports:
             - "27017:27017"
-    prepros:
-        build: ./pre-processor
+    router:
+        build: ./wyze-router
         links:
             - rabbit
             - mongo
