--- a/wyze-engine/conf/requirements.txt
+++ b/wyze-engine/conf/requirements.txt
@@ -1,6 +1,15 @@
+beautifulsoup4==4.6.0
 numpy==1.13.1
+pandas==0.20.2
+patsy==0.4.1
 pika==0.10.0
 pymongo==3.4.0
+python-dateutil==2.6.0
+pytz==2017.2
+requests==2.14.2
 scikit-learn==0.18.2
 scipy==0.19.1
 simplejson==3.11.1
+six==1.10.0
+statsmodels==0.8.0
+toolz==0.8.2
