--- a/mgnt-console/conf/requirements.txt
+++ b/mgnt-console/conf/requirements.txt
@@ -1,5 +1,8 @@
+astroid==1.5.3
 bcrypt==3.1.3
+certifi==2017.7.27.1
 cffi==1.10.0
+chardet==3.0.2
 click==6.7
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
@@ -8,12 +11,20 @@ Flask-PyMongo==0.5.1
 Flask-Script==2.0.5
 Flask-Testing==0.6.2
 gunicorn==19.7.1
+idna==2.5
+isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.6
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 pika==0.10.0
 pycparser==2.18
+pylint==1.7.2
 pymongo==3.4.0
+requests==2.18.2
 simplejson==3.11.1
 six==1.10.0
+urllib3==1.21.1
 Werkzeug==0.12.2
+wrapt==1.10.10
