--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,21 +13,39 @@ services:
         build: mongodb:latest
         ports:
             - "27017:27017"
-    prepros:
-        build: ./pre-processor
+    redis:
+        build: redis:latest
+        ports:
+            - "6379:6379"
+    router:
+        build: ./wyze-router
         links:
             - rabbit
             - mongo
+            - redis
         environment:
             - BROKER_ADDRESS=rabbit
             - MONGO_URL=mongodb://mongo:27017/wyze
+            - REDIS_ADDRESS=redis
+    engine:
+        build: ./wyze-engine
+        links:
+            - rabbit
+            - mongo
+            - redis
+        environment:
+            - BROKER_ADDRESS=rabbit
+            - MONGO_URL=mongodb://mongo:27017/wyze
+            - REDIS_ADDRESS=redis
     console:
         build: ./mgnt-console
         links:
             - rabbit
             - mongo
+            - redis
         environment:
             - BROKER_ADDRESS=rabbit
             - MONGO_URL=mongodb://mongo:27017/wyze
+            - REDIS_ADDRESS=redis
         ports:
             - "5000:5000"
