--- a/wyze-router/conf/requirements.txt
+++ b/wyze-router/conf/requirements.txt
@@ -1,11 +1,14 @@
 attrs==15.2.0
 Automat==0.5.0
+certifi==2017.4.17
+click==6.7
 constantly==15.1.0
 hyperlink==17.1.1
 incremental==16.10.1
 paho-mqtt==1.3.0
 pika==0.10.0
 pymongo==3.3.0
+redis==2.10.5
 simplejson==3.10.0
 six==1.10.0
 Twisted==17.5.0
