--- a/wyze-engine/Dockerfile
+++ b/wyze-engine/Dockerfile
@@ -1,14 +1,21 @@
-FROM jamiehewland/alpine-pypy
+FROM continuumio/anaconda3
 
 MAINTAINER Project Wyze Team
 
 ENV BUILD_DIR=/tmp/build/
 ENV APP_DIR=/var/app
+ENV CONDA=/opt/conda/bin/conda
+ENV PIP=/opt/conda/bin/pip
 
-RUN apk update && apk add supervisor
+RUN apt install -y supervisor
 
 COPY conf/requirements.txt $BUILD_DIR
-RUN pip3 install -r $BUILD_DIR/requirements.txt -i https://pypi.douban.com/simple
+COPY conf/conda_req.txt $BUILD_DIR
+
+RUN conda install -y --file $BUILD_DIR/conda_req.txt
+RUN pip install -r $BUILD_DIR/requirements.txt
+# RUN PATH=/opt/conda/bin conda install -y --file $BUILD_DIR/conda_req.txt
+# RUN PATH=/opt/conda/bin pip install -r $BUILD_DIR/requirements.txt
 
 COPY conf/supervisord.conf /etc/
 COPY src $APP_DIR
