--- a/wyze-engine/conf/supervisord.conf
+++ b/wyze-engine/conf/supervisord.conf
@@ -1,7 +1,8 @@
 [supervisord]
 nodaemon=true
+loglevel=debug
 
 [program:python]
-command=pypy3 main.py
+command=/opt/conda/bin/python main.py
 directory=/var/app
 environment=LC_ALL=C.UTF-8
