--- a/mgnt-console/conf/supervisord.conf
+++ b/mgnt-console/conf/supervisord.conf
@@ -1,7 +1,8 @@
 [supervisord]
 nodaemon=true
+loglevel=debug
 
 [program:python]
-command=gunicorn main:app -b 0.0.0.0:5000
+command=/bin/sh -c "python manage.py init && gunicorn main:app -b 0.0.0.0:5000"
 directory=/var/app
 environment=LC_ALL=C.UTF-8
