--- a/wyze-router/Dockerfile
+++ b/wyze-router/Dockerfile
@@ -8,7 +8,7 @@ ENV APP_DIR=/var/app
 RUN apk update && apk add supervisor
 
 COPY conf/requirements.txt $BUILD_DIR
-RUN pip3 install -r $BUILD_DIR/requirements.txt -i https://pypi.douban.com/simple
+RUN pip3 install -r $BUILD_DIR/requirements.txt
 
 COPY conf/supervisord.conf /etc/
 COPY src $APP_DIR
