--- a/wyze-router/conf/supervisord.conf
+++ b/wyze-router/conf/supervisord.conf
@@ -3,6 +3,6 @@ nodaemon=true
 loglevel=debug
 
 [program:python]
-command=pypy3 main.py
+command=pypy3 -m app
 directory=/var/app
 environment=LC_ALL=C.UTF-8
