[engine] Python Modularization

--- a/wyze-engine/conf/supervisord.conf
+++ b/wyze-engine/conf/supervisord.conf
@@ -3,6 +3,6 @@ nodaemon=true
 loglevel=debug
 
 [program:python]
-command=/opt/conda/bin/python main.py
+command=/opt/conda/bin/python -m app
 directory=/var/app
 environment=LC_ALL=C.UTF-8
