[rabbit] Enabling HiPE compiler

--- a/rabbit-mqtt/Dockerfile
+++ b/rabbit-mqtt/Dockerfile
@@ -8,5 +8,7 @@ RUN rabbitmq-plugins enable --offline rabbitmq_management
 RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
 RUN rabbitmq-plugins enable --offline rabbitmq_message_timestamp
 
+ENV RABBITMQ_HIPE_COMPILE 1
+
 EXPOSE 15672
 EXPOSE 1883
