--- a/rabbit-mqtt/Dockerfile
+++ b/rabbit-mqtt/Dockerfile
@@ -1,8 +1,13 @@
-FROM rabbitmq:3.6.10
+FROM rabbitmq:3.6.11
 
 MAINTAINER Project Wyze Team
 
-COPY rabbitmq_message_timestamp.ez /usr/lib/rabbitmq/lib/rabbitmq_server-3.6.10/plugins/
+COPY rabbitmq_message_timestamp.ez /usr/lib/rabbitmq/lib/rabbitmq_server-3.6.11/plugins/
+
+COPY rabbitmq.config /etc/rabbitmq/
+COPY definitions.json /etc/rabbitmq/
+
+RUN chmod +r /etc/rabbitmq/rabbitmq.config
 
 RUN rabbitmq-plugins enable --offline rabbitmq_management
 RUN rabbitmq-plugins enable --offline rabbitmq_mqtt
