--- a/rabbit-mqtt/rabbitmq.config
+++ b/rabbit-mqtt/rabbitmq.config
@@ -5,10 +5,13 @@
 		{ ssl_listeners, [ ] },
 		{ hipe_compile, true }
 	] },
-	{ rabbitmq_management, [ { listener, [
-		{ port, 15672 },
-		{ ssl, false }
-	] } ] },
+	{ rabbitmq_management, [
+        { listener, [
+		    { port, 15672 },
+		    { ssl, false }
+	    ] },
+        { load_definitions, "/etc/rabbitmq/definitions.json" } 
+    ] },
     {rabbitmq_mqtt, [{default_user,     <<"mqtt_guest">>},
                   {default_pass,     <<"guest">>},
                   {allow_anonymous,  true},
@@ -20,4 +23,4 @@
                   %% Default MQTT with TLS port is 8883
                   %% {ssl_listeners,    [8883]}
     ] }
-]
+].
