--- a/mgnt-console/src/app/frontend/package.json
+++ b/mgnt-console/src/app/frontend/package.json
@@ -26,6 +26,7 @@
     "react-transition-group": "^1.1.3",
     "reactstrap": "4.6.2",
     "redux": "^3.7.1",
+    "sweetalert2": "^6.10.1",
     "universal-cookie": "^2.0.8"
   },
   "scripts": {
